<resources>
    <string name="app_name">Githubgram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="about">About</string>
    <string name="logo">logo</string>
    <string name="input_username">Input Username</string>
    <string name="back_button">back button</string>
    <string name="repositories">Repositories</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="internet_unavailable">Internet unavailable</string>
    <string name="users_not_found">Users not found</string>
    <string name="not_have_followers">This user doesn\'t have any followers</string>
    <string name="not_have_following">This user doesn\'t follow anyone</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="floating_favorite_button">Floating favorite button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="you_don_t_have_any_favorite_users">You don\'t have any favorite users</string>
    <string name="dark_mode">Dark Mode</string>
</resources>