<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite_border_48"
        android:title="@string/favorites"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about_24"
        android:title="@string/about"
        app:showAsAction="collapseActionView" />
</menu>